--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ pure-eval==0.2.2
 Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pywin32==306
+# pywin32==306 -> only for windows, crashes on Linux (Github Actions)
 pyzmq==26.0.3
 scikit-learn==1.5.0
 scipy==1.13.1
