--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpickle==3.0.0
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.1
@@ -25,12 +26,14 @@ fastapi-cli==0.0.4
 filelock==3.14.0
 fonttools==4.52.4
 fsspec==2024.5.0
+future==1.0.0
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+hyperopt==0.2.7
 idna==3.7
 iniconfig==2.0.0
 intel-openmp==2021.4.0
@@ -67,6 +70,7 @@ prompt_toolkit==3.0.45
 protobuf==4.25.3
 psutil==5.9.8
 pure-eval==0.2.2
+py4j==0.10.9.7
 pyarrow==16.1.0
 pydantic==2.7.2
 pydantic_core==2.18.3
@@ -106,6 +110,7 @@ tomlkit==0.12.5
 toolz==0.12.1
 torch==2.3.0
 tornado==6.4
+tqdm==4.66.4
 traitlets==5.14.3
 typer==0.12.3
 typing_extensions==4.12.0
