--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ debugpy==1.8.1
 decorator==5.1.1
 dill==0.3.8
 dnspython==2.6.1
+docker-pycreds==0.4.0
 email_validator==2.1.1
 exceptiongroup==1.2.1
 executing==2.0.1
@@ -93,6 +94,8 @@ rich==13.7.1
 rpds-py==0.18.1
 scikit-learn==1.5.0
 scipy==1.13.1
+sentry-sdk==2.3.1
+setproctitle==1.3.3
 shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
@@ -118,6 +121,7 @@ tzdata==2024.1
 ujson==5.10.0
 urllib3==2.2.1
 uvicorn==0.30.0
+wandb==0.17.0
 watchdog==4.0.1
 watchfiles==0.22.0
 wcwidth==0.2.13
